syntax = "proto3";
package chord;
option go_package = "github.com/taisho6339/gord/chord";

import "google/protobuf/empty.proto";

service ChordService {
  rpc Successor(google.protobuf.Empty) returns (Node) {}
  rpc Predecessor(google.protobuf.Empty) returns (Node) {}

  rpc FindSuccessorByTable(FindRequest) returns (Node) {}
  rpc FindSuccessorByList(FindRequest) returns (Node) {}
  rpc FindClosestPrecedingNode(FindRequest) returns (Node) {}

  rpc Notify(Node) returns (google.protobuf.Empty) {}
}

message FindHostRequest {
  string key = 1;
}

message FindRequest {
  bytes id = 1;
}

message Node {
  string host = 1;
}